tests/should_fail/fn_extends_nonexistent_type.nv
module main

// SHOULD FAIL: fn extends from a custom type that does not exist
fn extends(MyFakeType) double(x: MyFakeType) -> MyFakeType {
    return x
}
